Improved several things